# goal-kit

./: .coverage  .gitignore  .gitmodules  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  ERROR_HANDLING_SUMMARY.md  EXAMPLE.md  EXAMPLE_PROJECT.md  FRIDAY_CHECKLIST.md  GOALIFY_README.md  IP_APPROACH.md  IP_PROTECTION_ANALYSIS.md  LICENSE  PHASE_4_TEST_PLAN.md  PRACTICAL_EXAMPLE.md  PUSH_CHANGES.ps1  PUSH_CHANGES.sh  README.md  RELEASE_NOTES_0_0_99.md  RELEASE_STRATEGY.md  RESEARCH_AND_DEVELOPMENT_PROCESS.md  SECURITY.md  STABILITY_ROADMAP.md  USAGE.md  WEEK1_COMPLETE.md  WEEK2_FINAL_REPORT.md  WEEK2_PLAN.md  WEEK2_SUMMARY.md  WEEK3_PLAN.md  WEEK3_SUMMARY.md  WEEK4_PLAN.md  agent-packaging-analysis.md  comparison.md  debug_syntax.py  examples.md  fixed_function.py  (+15 more)
.github/: CODEOWNERS  README.md  dependabot.yml
agents/: README.md
docs/: .gitignore  404.html  ADVANCED_PROJECT_STRUCTURE.md  ADVANCED_PROJECT_SYSTEM_SUMMARY.md  AI_AGENT_REFERENCE.md  ANALYTICS_REFERENCE.md  API_REFERENCE.md  ASSET_MANAGEMENT.md  AUTOMATED_SETUP.md  AUTOMATION_REFERENCE.md  CLI_REFERENCE.md  CROSS_PLATFORM_SCRIPTING.md  DOCUMENTATION_SYSTEM.md  ENVIRONMENT_MANAGEMENT.md  GOVERNANCE_INTEGRATION.md  GOVERNANCE_REFERENCE.md  MONITORING_REFERENCE.md  MULTI_TEAM_WORKFLOW_SUPPORT.md  PROJECT_STRUCTURE.md  QUALITY_ASSURANCE_REFERENCE.md  README.md  SECURITY_REFERENCE.md  TEMPLATE_REFERENCE.md  TEMPLATE_SYSTEM.md  TROUBLESHOOTING_FAQ.md  USER_GUIDES.md  VERSION_CONTROL_INTEGRATION.md  _config.yml  adapt-command.md  agent-profile-command.md  ai-integration.html  ai-integration.md  alignment-guide.md  analytics-command.md  analytics-guide.md  analytics.html  analytics.md  analyze-command.md  api.html  architecture.md  (+71 more)
goal-kit/: .gitignore  README.md  create-github-release.sh  logo.txt  package-releases.sh  pyproject.toml  updated-package-releases.sh
goal-kit/.goalify/templates/: goal-definition.md  milestone-planning.md
goal-kit/.qwen/commands/: goal.toml  milestone.toml
goal-kit/scripts/: check-release-exists.sh  generate-release-notes.sh  get-next-version.sh  install.sh  update-version.sh
goal-kit/scripts/bash/: create-goal.sh  generate-report.sh  update-progress.sh
goal-kit/scripts/powershell/: create-goal.ps1  generate-report.ps1  update-progress.ps1
goal-kit/src/goal_kit/: __init__.py
goal-kit/templates/: achievement-execution.md  business-goal.json  goal-changelog.md  goal-contributing.md  goal-definition.md  goal-readme.md  goal-template.json  learning-goal.json  milestone-planning.md  personal-goal.json  progress-report.md  research-goal.json  software-goal.json  software-project-template.json
goal-kit/templates/commands/: achieve.md  goal.md  milestone.md  progress.md
(+461 files in other folders)
