[project]
name = "goalkeeper-cli"
version = "2.0.1"
license = "MIT"
description = "Goalkeeper CLI, part of Goal Kit. A tool to bootstrap your projects for Goal-Driven Development (GDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
goalkeeper = "goalkeeper_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goalkeeper_cli", "goalkeeper_cli.commands"]

[tool.setuptools.package-dir]
"" = "src"