[project]
name = "goalkeeper-cli"
version = "2.2.0"
license = "MIT"
description = "Goalkeeper CLI, part of Goal Kit. A tool to bootstrap your projects for Goal-Driven Development (GDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "black>=26.3.1",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
]

[project.scripts]
goalkeeper = "goalkeeper_cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goalkeeper_cli", "goalkeeper_cli.commands"]

[tool.setuptools.package-dir]
"" = "src"