[project]
name = "goal-kit"
version = "0.1.0"
description = "Goal-Kit CLI - A tool to transform spec-kit's patterns into goal-driven development"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "python-dateutil",
    "pydantic>=2.0.0",
]

[project.scripts]
goal-kit = "goal_kit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goal_kit"]